--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p> My biggest passion is Jiu-Jitsu. I have been learning it for 5 years and started my career as a coach back in 2019</p>
       </div>
       <div class="skill-row">
-        <img class="marketing" src="https://https://cdn-icons.flaticon.com/png/512/2518/premium/2518048.png?token=exp=1652966835~hmac=261748070909bcc304df29c1682b1e11" alt="marketing">
+        <img class="marketing" src="https://cdn-icons.flaticon.com/png/512/2518/premium/2518048.png?token=exp=1652966835~hmac=261748070909bcc304df29c1682b1e11" alt="marketing">
         <h3>Digital Marketing</h3>
         <p> One of my biggest interests is digital marketing. I love everything related to the latest updates considering Google Ads and analytics and applying in a professional environment</p>
       </div>
