--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>Get In Touch</h2>
       <p class= "outro">Are you interested in any of my marketing services or looking to talk about or learn Jiu Jitsu? Hit the button below or contact me on any of my social media pages</p>
       <button class= "contact-me" type="button" href="rubenverschuur93@gmail.com" name="contact me">Contact me</button>
-      <h3 class= "social-media-message">Find me on social media!</h3>
+      <h3 class= "social-media-message"></h3>
     </div>
   </div>
 
